@@ -1076,15 +1076,15 @@ static const OptionInfo
     { "Peaks", (ssize_t) PeaksKernel, MagickFalse },
     { "Edges", (ssize_t) EdgesKernel, MagickFalse },
     { "Corners", (ssize_t) CornersKernel, MagickFalse },
-    { "Ridges", (ssize_t) RidgesKernel, MagickFalse },
+    { "ThinDiagonals", (ssize_t) ThinDiagonalsKernel, MagickFalse },
     { "LineEnds", (ssize_t) LineEndsKernel, MagickFalse },
     { "LineJunctions", (ssize_t) LineJunctionsKernel, MagickFalse },
+    { "Ridges", (ssize_t) RidgesKernel, MagickFalse },
     { "ConvexHull", (ssize_t) ConvexHullKernel, MagickFalse },
     { "Skeleton", (ssize_t) SkeletonKernel, MagickFalse },
     { "Chebyshev", (ssize_t) ChebyshevKernel, MagickFalse },
     { "Manhattan", (ssize_t) ManhattanKernel, MagickFalse },
     { "Euclidean", (ssize_t) EuclideanKernel, MagickFalse },
-    { "Test", (ssize_t) TestKernel, MagickTrue },       /* experimental */
     { "User Defined", (ssize_t) UserDefinedKernel, MagickTrue }, /* internal */
     { (char *) NULL, (ssize_t) UndefinedKernel, MagickFalse }
   },
